syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Quaestiox/JustTalk_backend/pb";

message UpdateUserRequest{
  int64 id = 1;
  optional string name = 2;
  optional string password = 3;
  optional string nickname = 4;
  optional string avatar_url = 5;
  optional int32 friend_count = 6;
  repeated int64 friends = 7;
}

message UpdateUserResponse{
  int64 id = 1;
  string name = 2;
  string nickname = 3;
  string avatar_url = 4;
  int32 friend_count = 5;
  repeated int64 friends = 6;
  google.protobuf.Timestamp create_at = 7;
  google.protobuf.Timestamp update_at = 8;
}


